@@ -1,3 +1,5 @@
+08-Jan-2012 VS2010 project URIs could fail to be generated when they were relative paths.
+
 08-Jan-2012 Guarding against calling System.Uri.MakeRelativeUri for relative URIs
 
 08-Jan-2012 VS2010 project file generation with 'UniqueIdentifiers' now write out GUIDs in upper case for consistency.
